<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_cover"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:scaleType="fitXY"
                app:layout_constraintTop_toTopOf="parent" />



            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_margin="20dp"
                android:rotation="180"
                android:src="@drawable/ic_right_arrow"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
         />


            <TextView
                android:id="@+id/tv_name_lable"
                style="@style/labels_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_cover" />

            <TextView
                android:id="@+id/tv_name_value"
                style="@style/values_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingBottom="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_name_lable"
                tools:text="@string/name" />

            <TextView
                android:id="@+id/tv_desc_lable"
                style="@style/labels_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingBottom="10dp"
                android:text="@string/description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_name_value" />

            <TextView
                android:id="@+id/tv_desc_value"
                style="@style/values_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingBottom="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_desc_lable"
                tools:text="@string/name" />


            <TextView
                android:id="@+id/tv_comics_lable"
                style="@style/labels_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingBottom="10dp"
                android:text="@string/COMICS"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_desc_value" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_comics"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/tv_comics_lable"
                tools:itemCount="20"
                tools:listitem="@layout/item_details" />


            <TextView
                android:id="@+id/tv_series_lable"
                style="@style/labels_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingBottom="10dp"
                android:text="@string/SERIES"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_comics" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_series"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/tv_series_lable"
                tools:itemCount="20"
                tools:listitem="@layout/item_details" />

            <TextView
                android:id="@+id/tv_stories_lable"
                style="@style/labels_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingBottom="10dp"
                android:text="@string/STORIES"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_series" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_stories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/tv_stories_lable"
                tools:itemCount="20"
                tools:listitem="@layout/item_details" />

            <TextView
                android:id="@+id/tv_event_lable"
                style="@style/labels_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingBottom="10dp"
                android:text="@string/EVENT"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_stories" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_event"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/tv_event_lable"
                tools:itemCount="20"
                tools:listitem="@layout/item_details" />


            <TextView
                android:id="@+id/tv_related_linked_lable"
                style="@style/labels_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingBottom="10dp"
                android:text="@string/RELEATED_LINKS"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_event" />


            <TextView
                android:id="@+id/tv_detail"
                style="@style/values_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingBottom="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_related_linked_lable"
                tools:text="@string/Detail" />


            <ImageView
                android:id="@+id/detail_arrow"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@drawable/ic_right_arrow"
                app:layout_constraintBottom_toBottomOf="@id/tv_detail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_detail" />


            <TextView
                android:id="@+id/tv_wiki"
                style="@style/values_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingBottom="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_detail"
                tools:text="@string/Wiki" />




            <ImageView
                android:id="@+id/wiki_arrow"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@drawable/ic_right_arrow"
                app:layout_constraintBottom_toBottomOf="@id/tv_wiki"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_wiki" />


            <TextView
                android:id="@+id/tv_comic_link"
                style="@style/values_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingBottom="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_wiki"
                tools:text="@string/ComicLink" />




            <ImageView
                android:id="@+id/comic_arrow"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@drawable/ic_right_arrow"
                app:layout_constraintBottom_toBottomOf="@id/tv_comic_link"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_comic_link" />



        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>